# min-cut-karger-near-linear

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
input/: 1.in  2.in  3.in  4.in  i1.txt  i2.txt  i3.txt  i4.txt  i5.txt
src/: CMakeLists.txt  binom.cpp  binom.hpp  custom_index_vector.hpp  edge.hpp  edge_index_makro.hpp  edge_index_vector.hpp  find_mincut.cpp  find_mincut.hpp  graph.cpp  graph.hpp  main.cpp  random.cpp  random.hpp  rooted_spanning_tree.cpp  rooted_spanning_tree.hpp  segment_tree.cpp  segment_tree.hpp  spanning_tree.cpp  spanning_tree.hpp  stoer_wagner.cpp  stoer_wagner.hpp  strong_index.hpp  tree_edge_weighter.cpp  tree_edge_weighter.hpp  tree_packing.cpp  tree_packing.hpp  two_respecting_cuts.cpp  two_respecting_cuts.hpp  two_respecting_trees.cpp  two_respecting_trees.hpp  types.hpp  union_find.cpp  union_find.hpp
tests/: CMakeLists.txt  graph_generation.cpp  graph_generation.hpp  stoer_wagner.cpp  stoer_wagner.hpp  test_2_respecting_cuts.cpp  test_find_mincut.cpp  test_random_graphs.cpp  test_tools.hpp  test_tree_packing.cpp  test_two_respecting_cuts.cpp  test_two_respecting_trees.cpp  util.cpp  util.hpp
